force-app/main/default/objects/Apttus_Config2__ProductOptionPrice__c/Apttus_Config2__ProductOptionPrice__c.object-meta.xml
<CustomObject>
    <description>Represents the price for an option or component</description>
    <label>Product Option Price</label>
    <nameField>
        <displayFormat>OP-{0000000000}</displayFormat>
        <label>Price Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Option Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>