force-app/main/default/objects/Apttus_Config2__ProductOptionPrice__c/fields/Apttus_Config2__AllocateGroupAdjustment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AllocateGroupAdjustment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether group price adjustments should be allocated to the product option.</description>
    <label>Allocate Group Adjustment</label>
    <type>Checkbox</type>
</CustomField>