force-app/main/default/objects/Apttus_Config2__ProductOptionPrice__c/fields/Apttus_Config2__AllowManualAdjustment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AllowManualAdjustment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether manual price adjustments are allowed for the product option.</description>
    <label>Allow Manual Adjustment</label>
    <type>Checkbox</type>
</CustomField>