force-app/main/default/objects/Apttus_Config2__ProductOptionPrice__c/fields/Apttus_Config2__PriceListId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceListId__c</fullName>
    <description>ID of the price list associated with the product</description>
    <label>Price List</label>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipLabel>Option Pricing</relationshipLabel>
    <relationshipName>ProductOptionPrices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>