force-app/main/default/objects/Apttus_Config2__ProductOptionPrice__c/fields/Apttus_Config2__RollupPriceMethod__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupPriceMethod__c</fullName>
    <description>The rollup price method.</description>
    <inlineHelpText>The rollup price method.</inlineHelpText>
    <label>Rollup Price Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Unit</fullName>
            </value>
            <value>
                <fullName>Flat Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>