force-app/main/default/objects/Apttus_Config2__ProductOptionPrice__c/fields/Apttus_Config2__RollupPriceToBundle__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RollupPriceToBundle__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the option price is rolled up to the bundle. This field is deprecated. Use the Price Included in Bundle field instead.</description>
    <label>Rollup Price To Bundle (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>